# konfigure

./: README.md  RELEASE.md
.github/workflows/: workflow.yml
python/: README.md  pyproject.toml  setup.py
python/confiture/: __init__.py  core.py
python/confiture/tests/: test_advanced_features.py  test_core.py
python/examples/basic_usage/: basic_example.py  config.yaml
python/examples/nested_config/: config.yaml  nested_example.py
python/examples/template_rendering/: template_example.py  templates.yaml
python/konfigure/: __init__.py  core.py
python/konfigure/tests/: test_advanced_features.py  test_core.py  test_thread_safety.py
typescript/: README.md  jest.config.js  package.json
typescript/examples/basic_usage/: basic_example.ts  config.yaml
typescript/examples/template_rendering/: template_example.ts  templates.yaml
typescript/src/: core.ts  index.ts
typescript/src/tests/: core.test.ts
