[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "konfigure"
dynamic = ["version"]
description = "A YAML-based configuration management tool for separating code from prompts in LLMs"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.setuptools_scm]
write_to = "konfigure/_version.py"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest]
testpaths = ["konfigure/tests"]
